# gartic-diffusion

./: .dockerignore  .gitignore  README.md  aws.py  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml
diffusion_server/: Dockerfile  pyproject.toml  requirements.txt  setup.py
diffusion_server/gartic_diffusion/: stable-diffusion.py
diffusion_server/src/: diffusion.py
web_server_fe/: Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  default.conf  package-lock.json  package.json  vite.config.ts
web_server_fe/fe/: index.html  package-lock.json  package.json  vite.config.ts
web_server_fe/fe/src/: App.vue  main.ts
web_server_fe/fe/src/assets/: main.css
web_server_fe/fe/src/components/: GamePage.vue  HomePage.vue  JoinLobbyDialog.vue  LobbyPage.vue  UserDialog.vue
web_server_fe/fe/src/stores/: game.ts  lobby.ts  socketio.ts
web_server_fe/fe/src/views/: LobbyView.vue
web_server_fe/src/: main.ts
web_server_fe/src/assets/: base.css
web_server_fe/src/components/: GamePage.vue  HomePage.vue  JoinLobbyDialog.vue  LobbyPage.vue  ShowoffPage.vue  UserDialog.vue
web_server_fe/src/router/: index.ts
web_server_fe/src/stores/: game.ts  lobby.ts
web_server_fe/src/views/: GameView.vue  LobbyView.vue  ShowoffView.vue
web_server_lobby/: Dockerfile  pyproject.toml
web_server_lobby/src/: app.py  image_generator.py  lobby.py
web_server_lobby/web_server_lobby/: app.py  lobby.py
