[tool.poetry]
name = "gartic-diffusion"
version = "0.1.0"
description = ""
authors = ["AeroX2 <james@ridey.email>"]
readme = "README.md"
packages = [{include = "gartic_diffusion"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
