[tool.poetry]
name = "web-server-lobby"
version = "0.1.0"
description = ""
authors = ["AeroX2 <james@ridey.email>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-socketio = "^5.3.1"
black = "^22.10.0"
simple-websocket = "^0.8.1"
rq = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
